kubernetes/awslbcontroller/aws_lb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb
spec:
  controllerName: gateway.k8s.aws/alb
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: alb
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:585517712585:certificate/f0af1a98-33a0-4b89-8ea2-c3830ea73eb0"
spec:
  gatewayClassName: alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: alb
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "studentus.tech"
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "studentus.tech"
    tls:             
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: tls-secret-placeholder
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app
  namespace: app
  annotations:  
    external-dns.alpha.kubernetes.io/hostname: studentus.tech
spec:
  parentRefs:
  - name: alb
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: consul-ingress-gateway
      namespace: consul
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: app
spec:
  parentRefs:
  - name: alb
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-app-to-consul
  namespace: consul
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: app
  to:
  - group: ""
    kind: Service
